--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,23 @@
   <version>1.0-SNAPSHOT</version>
   <name>september</name>
   <url>http://maven.apache.org</url>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.0</version>
+          <configuration>
+          <suiteXmlFiles>
+          <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+  
    <dependencies>
 	<dependency>
 	    <groupId>org.testng</groupId>
@@ -14,13 +31,7 @@
 	    <version>6.14.3</version>
 	    <scope>compile</scope>
 	</dependency>
-  	<dependency>
-	  <groupId>org.apache.maven.plugins</groupId>
-	  <artifactId>maven-surefire-plugin</artifactId>
-	  <version>2.21.0</version>
-	  <type>maven-plugin</type>
-	</dependency>
-	
+
 	<dependency>
 	    <groupId>org.seleniumhq.selenium</groupId>
 	    <artifactId>selenium-java</artifactId>
