--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
   <version>1.0-SNAPSHOT</version>
   <name>september</name>
   <url>http://maven.apache.org</url>
+  <profiles>
+  <profile>
+  <id>Regression</id>
   <build>
     <pluginManagement>
       <plugins>
@@ -23,7 +26,8 @@
       </plugins>
     </pluginManagement>
   </build>
-  
+  </profile>
+  </profiles>
    <dependencies>
 	<dependency>
 	    <groupId>org.testng</groupId>
